Fix collapsing label and change button

--- a/themes/light.css
+++ b/themes/light.css
@@ -169,9 +169,9 @@ select.std.w200[name="UID_UNIVERSITY"]
 .loginForm td:nth-child(2) > div.outButton.w120 input {
     bottom: 25px;
     font-size: 10pt;
-    width: 100px;
-    left: calc(50% - 50px);
-    padding: 7px 0;
+    width: 112px;
+    left: calc(50% - 55px);
+    padding: 3px 0px;
 }
 
 .loginForm div.outButton.w120 input:hover,
@@ -844,7 +844,7 @@ input.err
 	color: #ffffff;
 	font-size: 14px;
 	font-weight: bold;
-	padding: 4px 0px;
+	padding: 4px;
 	text-decoration: none;
 	width: 100%;
 	text-align: center;
